--- a/styles/temples.css
+++ b/styles/temples.css
@@ -18,7 +18,7 @@
 	content: "X";
 }
 
-@media only screen and (min-width: 40em) {
+@media only screen and (min-width: 720px) {
 	.navigation {
 		display: flex;
 	}
