--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -20,6 +20,7 @@ header {
 
 header h1 {
     color: rgb(255, 255, 255);
+    cursor: pointer;
 }
 
 .title {
@@ -77,7 +78,6 @@ figure img {
     grid-gap: 25px;
     place-items: center;
     padding: 10px;
-
 }
 
 footer {
@@ -89,7 +89,7 @@ footer {
 
 }
 
-@media only screen and (min-width: 40em) {
+@media only screen and (min-width: 720px) {
     .navigation {
         display: flex;
     }
@@ -108,9 +108,17 @@ footer {
     }
 }
 
-@media (max-width: 900px) {
+
+@media (max-width: 1000px) {
     .temples {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-gap: 25px;
+        grid-template-columns: repeat(2, minmax(150px, 1fr));
+        grid-gap: 40px;
+    }
+}
+
+@media (max-width: 720px) {
+    .temples {
+        grid-template-columns: repeat(1, minmax(150px, 1fr));
+        grid-gap: 40px;
     }
 }
