--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: rgb(35, 36, 36);
+    background-color: #1a1b1b;
     display: flex;
     justify-content: space-between;
     align-items: center;
